--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,14 @@
 
+spring:
+  application:
+    name: config-server-prod
+
+# Eureka Client Configuration
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8000/eureka
